fixed front page layout where text was getting cut off, plus where tooltips were getting cut off.

--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -1,6 +1,6 @@
 nav {
     overflow: hidden;
-	margin-bottom: 0px;
+	margin-bottom: 25px;
 }
 
 nav ul {
