--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -14,6 +14,8 @@ html, body {
 #main {
     overflow: auto;
 	padding: 0px 50px 35px 50px;
+    position: relative;
+
 }
 
 #logos {
@@ -22,10 +24,6 @@ html, body {
     padding: 25px 25px 0;
 }
 
-
-#frontpage_header {
-	padding-top: 50px;
-}
 
 #footer {
     position: relative;
@@ -105,12 +103,62 @@ a:active {
     background-image: url(../images/epost-sm-b.png);
 }
 
-#frontpage_header, #header {
+
+#frontpage_header {
+	padding-top: 50px;
+    display: table-row;
+    border: 1px solid red;
+    height: auto;
     position: relative;
     width: 100%;
 }
 
-#frontpage_header div, #header div {
+#frontpage_header div {
+    border-style: solid;
+    border-color: white;
+    border-width: 0 0 0 2px;
+    padding-left: 25px;
+    margin-left: 250px;
+    display: table-cell;
+    vertical-align: bottom;
+}
+
+
+#frontpage_header h1 {
+    display: table-cell;
+    vertical-align: bottom;
+    line-height: 90px;
+    font-size: 110px;
+    font-weight: normal;
+    margin: 0;
+    padding-right: 25px;
+    padding-bottom: 7px;
+    width: 225px;
+    height: 186px;
+}
+
+#frontpage_header h1 span {
+    display: block;
+    overflow: visible;
+    text-align: right;
+    float: left;
+    width: 225px;
+    height: 83px;
+    clear: both;
+}
+
+#frontpage_header h1 span:first-child {
+    margin-bottom: 20px;
+}
+
+
+
+#header {
+    position: relative;
+    width: 100%;
+}
+
+#header div {
     font-size: 1.2em;
     line-height: 1.4em;
     border-style: solid;
@@ -124,6 +172,8 @@ a:active {
 }
 
 #frontpage_header div p, #header div p {
+    font-size: 1.2em;
+    line-height: 1.4em;
     margin-bottom: 0;
     padding-bottom: 0;
 }
@@ -171,35 +221,7 @@ h3 {
 }
 
 
-#frontpage_header h1 {
-    line-height: 90px;
-    font-size: 110px;
-    font-weight: normal;
 
-	  margin: 0;
-    padding-right: 25px;
-	  padding-bottom: 7px;
-
-    border-style: solid;
-    border-color: white;
-    border-width: 0 2px 0 0;
-    width: 225px;
-    height: 186px;
-}
-
-#frontpage_header h1 span {
-    display: block;
-    overflow: visible;
-    text-align: right;
-    float: left;
-    width: 225px;
-    height: 83px;
-    clear: both;
-}
-
-#frontpage_header h1 span:first-child {
-    margin-bottom: 20px;
-}
 
 
 
@@ -495,4 +517,3 @@ float:left;
 width:0;
 margin-top:-32767px;/* thank you Erik J - negate effect of float*/
 }
-
